<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <!-- Header component -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title for the insights page -->
        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="Location"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Button to go back to main activity -->
        <Button
            android:id="@+id/buttonBackToMain"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:text="Back"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <!-- Container for latitude and longitude -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latitude: " />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Longitude: " />
    </LinearLayout>

    <!-- FrameLayout to position the WebView and ProgressBar -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- WebView for displaying the map -->
        <WebView
            android:id="@+id/map_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- ProgressBar for loading indicator, centered both vertically and horizontally -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>