...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/cityNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter city name"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonAddLocation"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="Add location"/>

            <TextView
                android:id="@+id/textView4"
...
